--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,18 @@
 
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
 
+<body>
+    <header></header>
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
